--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,15 +4,24 @@
     <meta charset="utf-8">
     <title>Expensapp</title>
     <link rel="stylesheet" href="css/normalize.3.0.2.css">
+    <link rel="stylesheet" href="js/lib/semantic-ui/dist/semantic.css"/>
     <link rel="stylesheet" href="css/app.css">
     <script data-main="js/app" src="js/require.js"></script>
   </head>
   <body>
-    <section id="app"></section>
-    <footer id="info">
-      <p>Created by <a href="http://twitter.com/djmidwood">Dan Midwood</a></p>
+    <div id="header" class="ui two column grid">
+      <div class="column"><h1>EXPENSAPP</h1></div>
+    </div>
+    <div id="container" class="ui three column grid">
+      <div class="column"></div>
+      <section id="app" class="column"></section>
+    </div>
+
+    <footer class="">
+      <div id="copyright" class="">
+        Created by <a href="http://twitter.com/djmidwood">Dan Midwood</a>, <br/>Background image by <a href="http://www.gratisography.com/">Gratisography</a>
+      </div>
     </footer>
-    <!-- <script src="js/app.js" type="text/javascript"></script> -->
 
   </body>
 </html>
