Make login page prettier
Prettier is such a subjective term, but I'm happier with it. As well as
styling changes this also adds some headers, better control over the css
elements, and a lorem ipsum marketing spiel over a background image.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,17 +9,20 @@
     <script data-main="js/app" src="js/require.js"></script>
   </head>
   <body>
-    <div id="header" class="ui two column grid">
-      <div class="column"><h1>EXPENSAPP</h1></div>
+    <div id="header" class="ui one column grid">
+      <div class="column"><h1>EXPENSAPP</h1><h3>[ Expense tracking with added calm ]</h3></div>
     </div>
-    <div id="container" class="ui three column grid">
-      <div class="column"></div>
-      <section id="app" class="column"></section>
+    <div id="outer-container" class="ui three column grid">
     </div>
 
-    <footer class="">
-      <div id="copyright" class="">
-        Created by <a href="http://twitter.com/djmidwood">Dan Midwood</a>, <br/>Background image by <a href="http://www.gratisography.com/">Gratisography</a>
+    <div id="footer" class="ui three column grid">
+      <div class="row">
+        <div class="seven wide column"></div>
+        <div class="four wide column">
+          Created by <a href="http://twitter.com/djmidwood">Dan Midwood</a>, <br/>
+          Background image by <a href="http://www.gratisography.com/">Gratisography</a><br>
+          Laptop image by <a href="https://www.flickr.com/photos/125167502@N02/14782749824/in/set-72157646779778414">Markus Spiske</a>
+        </div>
       </div>
     </footer>
 
