--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="header" class="ui one column grid">
-      <div class="column"><h1>EXPENSAPP</h1><h3>[ Expense tracking with added calm ]</h3></div>
+      <div class="column"><h1>Expensapp</h1><h3>Expense tracking with added calm</h3></div>
     </div>
     <div id="outer-container" class="ui three column grid">
     </div>
@@ -20,8 +20,7 @@
         <div class="seven wide column"></div>
         <div class="four wide column">
           Created by <a href="http://twitter.com/djmidwood">Dan Midwood</a>, <br/>
-          Background image by <a href="http://www.gratisography.com/">Gratisography</a><br>
-          Laptop image by <a href="https://www.flickr.com/photos/125167502@N02/14782749824/in/set-72157646779778414">Markus Spiske</a>
+          Background image by <a href="http://www.gratisography.com/">Gratisography</a>
         </div>
       </div>
     </footer>
