--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/normalize.3.0.2.css">
     <link rel="stylesheet" href="js/lib/semantic-ui/dist/semantic.css"/>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
     <script data-main="js/app" src="js/require.js"></script>
   </head>
   <body>
